[package]
name = "reg_sc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mft = "0.6.0" 
notatin = { git = "https://github.com/strozfriedberg/notatin" }


[[bin]]
name = "parse-sc"
path = "src/parse-sc.rs"
