[package]
name = "reg_sc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mft = "0.6.0" 
notatin = { git = "https://github.com/strozfriedberg/notatin" }
string = "0.3.0"
csv = "1.1.6"
argparse = "0.2.2"

#[[bin]]
#name = "parse-sc"
#path = "src/parse-sc.rs"

#[[bin]]
#name = "parse-mft"
#path = "src/parse-mft.rs"


[[bin]]
name = "parse-syscache"
path = "src/parse-syscache.rs"